<resources>
    <string name="app_name">ProjeManaj</string>
    <string name="tv_activity_intro_get_started">Let\'s Get Started</string>
    <string name="tv_activity_intro_description">Collaborate and Plan Together Across Multiple Devices on ProjeManaj\'s Minimalist Interface</string>
    <string name="btn_activity_intro_sign_in">Sign In</string>
    <string name="btn_activity_intro_sign_up">Sign Up</string>
    <string name="iv_activity_intro_image_content_description">A person arranging task</string>
    <string name="tv_activity_sign_up_toolbar_title">SIGN UP</string>
    <string name="tv_activity_sign_up_instruction">Enter your name, email, and password to register a new account.</string>
    <string name="edt_activity_sign_up_name">Name</string>
    <string name="edt_activity_sign_up_email">Email</string>
    <string name="edt_activity_sign_up_password">Password</string>
    <string name="btn_activity_sign_up_sign_up">Sign Up</string>
    <string name="tv_activity_sign_in_toolbar_title">SIGN IN</string>
    <string name="tv_activity_sign_in_instruction">Enter your email and password to log into your account.</string>
    <string name="btn_activity_sign_in_sign_in">Sign In</string>
    <string name="tv_dialog_progress_text">Please wait…</string>


</resources>